# examples

./: .gitconfig  .gitignore  .vimrc  .zshrc  1070-plugins  airport  auto-commit.sh  auto-update.sh  auto_commit.sh  bookmarks_2022_4_6.html  bookmarks_2022_6_1.html  bookmarks_2022_6_20.html  bookmarks_2022_7_26.html  bookmarks_2023_3_28.html  break.gdb  clone-dtk.sh  clone.sh  command-questions.md  command.md  common-questions.md  crontab  git-command.md  log  readme.md  socket.platuml  summary.md  tmp  tmp.json  tmp.md  常用命令.md
QtProject/: QtCreator.db  QtCreator.ini
QtProject/qtcreator/: .clang-format  cmaketools.xml  debuggers.xml  default.qws  devices.xml  dtk-about-acknowledge.qws  dtk-combobox-top-bottom-background.qws  dtk-floatbutton-in-compact.qws  dtk-fontdpi.qws  dtk-icon-scale.qws  dtk-leftbutton.qws  dtk.qws  network.qws  profiles.xml  qt-creator.qws  qt-network.qws  qt-plugin.qws  qt-pointer.qws  qt.qws  qtversion.xml  toolchains.xml
algorithm/: heapsort.cpp  mergesort.cpp  quicksort.cpp  radixsort.cpp
cmake/: CMakeLists.txt
code/algorithm/: CMakeLists.txt  bucketsort.cpp  insertionsort.cpp  main.cpp  selectionsort.cpp
code/asio/: CMakeLists.txt
code/cmake/: CMakeLists.txt
code/cmake/example/: CMakeLists.txt
code/libevent/: CMakeLists.txt
code/libevent/hello-world/: CMakeLists.txt
code/libevent/select-based-server/: select-based-server.c
code/libevent/simple-blocking-httpclient/: CMakeLists.txt  simple-blocking-httpclient.c
code/qt/: CMakeLists.txt
code/qt-example/: CMakeLists.txt
code/qt-example/extending-qml/: CMakeLists.txt
code/qt/extending-qml-advanced/advanced2-Inheritance-and-coercion/: CMakeLists.txt
code/qt/extending-qml-advanced/advanced4-Grouped-properties/: CMakeLists.txt
code/qt/icon/: CMakeLists.txt  window.h
code/thread-pool/: thread_pool.c
code/unix-environment/chapter1/: CMakeLists.txt  in2out_std.c  print_procID.c
code/unix-environment/chapter11/: CMakeLists.txt  double_mutex_struct.c  exit_code_error.c  get_exit_code.c  print_thread_ID.c  pthread_cleanup.c
code/wayland/: CMakeLists.txt
code/wayland/binding-to-globals/: main.c
code/wayland/client/: CMakeLists.txt
code/wayland/registering-globals/: main.c
code/wayland/wayland-client/: CMakeLists.txt
code/wayland/wayland-server/: CMakeLists.txt  main.c
code/xcb/xcb-examples/: CMakeLists.txt
code/xcb/xcb-xlib/: CMakeLists.txt  xcb-xlib.c
config/kitty/: job-data.kitty
configs/: .gdbinit  .gitconfig  .npmrc  .vimrc  .zshrc  Doxyfile  airport  keymaps.lua  lazy.lua  xiaoya.md
configs/.docker/: config.json
configs/QtProject/: QtCreator.db  QtCreator.ini
demo-simple/: main.cpp
doc/: command.md  common-questions.md  git-command.md  mode-view.md  qt-pointer.md  qtcreator-plugins.platuml
docs/: CMakeLists.txt  cmake.md  command.md  common-questions.md  crontab  design-patterns-Qt.md  env.md  event-propagate.sketchpad  git-command.md  git.md  license-summary.md  linker.md  misc.md  neovim.md  ohmyzsh.md  platform-window.platuml  qt-design-patterns.md  qt-event.md  qt-moc.md  qt.md  regular-expression.md  socket.platuml  tech-stack.md  terminal-keymaps.md  test
docs/Design-Pattern/: AbstractFactory.md  FactoryMethod.md  design-principles.md
docs/Qt/: D-Bus.md  D-Bus_Adaptors.md  moc.md  mode-view.md  mos.md  plugin.md  property-system.md  qss-qstyle.md  qt.md  why-moc.md
docs/Qt/QML/: Defining-QML-Types-from-Cpp.md  Defining_QML_Types_from_Cpp.md  QML_cpp.md  QQmlComponent.md  cppAttr2QML.md  object-attributes.md
docs/Qt/asserts/: 未命名绘图.drawio
docs/c++/: Effective-C++.md  Inside-the-C++-object-model.md
docs/design-pattern/: AbstractFactory.md  FactoryMethod.md
docs/qt/: D-Bus.md  D-Bus_example.md  Qt-D-Bus.md  event.md  icon.md  keyboard-focus-in-widgets.md  moc.md  platform-window.md  qlibrary.md  qss-qstyle.md  qt-misc.md  qtquick-input-focus.md
docs/qt/QML/: Component.md  Defining-QML-Types-from-Cpp.md  QML.md  object-attributes.md
docs/qt/code/: refCount.cpp
docs/shell/: basic-sh.md
docs/unix-environment/: ipc.md  thread.md  thread_syn.md
qt/event/: CMakeLists.txt  window.h
qt/extending-qml-advanced/: CMakeLists.txt
qt/extending-qml-advanced/advanced1-Base-project/: CMakeLists.txt
qt/extending-qml-advanced/advanced3-Default-properties/: Main.qml
qt/extending-qml-advanced/advanced5-Attached-properties/: CMakeLists.txt
qt/extending-qml-advanced/advanced6-Property-value-source/: CMakeLists.txt
qt/icon/: CMakeLists.txt
qt/locale/: CMakeLists.txt
scripts/: add-line.sh  auto-commit.sh  auto-update.sh  clone-dtk.sh  clone.sh  countExe  crontab  dci  dcis.sh  filelock  fmt-wrap  hilow  initializeANSI  inpath  newrm  nicenumber  normdate  scriptbc  timer.sh  validalnum  validdate  validfloat  validint
shortcut/: terminal-keyboard-shortcuts.md
src/cmake/: CMakeLists.txt
src/cmake/example/: CMakeLists.txt
src/demo-simple/: CMakeLists.txt  main.cpp
src/qt/: CMakeLists.txt
src/qt/clipEffectWidget/: CMakeLists.txt  window.cpp  window.h
src/qt/clipboard/: CMakeLists.txt
src/qt/dbus-chat/: CMakeLists.txt
src/qt/dbus-complexpingpong/: complexpong.cpp
src/qt/extending-qml-advanced/advanced3-Default-properties/: CMakeLists.txt
src/qt/extending-qml/chapter3-bindings/: CMakeLists.txt
src/qt/extending-qml/chapter4-customPropertyTypes/: piechart.h
src/qt/icon/: window.cpp
src/qt/lineedit/: CMakeLists.txt  window.h
src/qt/locale/: window.cpp  window.h
src/qt/pingpong/: CMakeLists.txt
src/qt/simple-qml/: CMakeLists.txt
src/unix-environment/chapter4/: CMakeLists.txt  test_unlink.c
unix-environment/: CMakeLists.txt
unix-environment/chapter1/: ls.c
unix-environment/chapter11/: mutex_struct.c  pthread_cond.c  pthread_rwlock.c
unix-environment/chapter4/: test_access.c  test_futimens.c  test_umask.c
unix-environment/include/: apue.h  error.c
unix-system/: CMakeLists.txt
unix-system/ipc/: CMakeLists.txt  pmsg_create.c  pmsg_receive.c  pmsg_send.c
unix-system/utils/: error_functions.c  get_num.h  tlpi_hdr.h
wayland/registering-globals/: CMakeLists.txt
xcb/: CMakeLists.txt
(+157 files in other folders)
